[package]
name = "banking-trace-tool"
version = "0.1.0"
authors = ["Andrew Fitzgerald <apfitzge@gmail.com>"]
repository = "https://github.com/apfitzge/banking-trace-tool"
edition = "2021"

[dependencies]
bincode = { version = "1.3.3" }
chrono = { version = "0.4" }
clap = { version = "4.3.11", features = ["derive"] }
prio-graph = { git = "https://github.com/apfitzge/prio-graph.git", rev = "c8ced5c68dbb64307573654897cf3284a4ac8a16" }
serde = { version = "1.0.190" }
serde_json = { version = "1.0.108" }
solana-core = { version = "3.0.4" }
solana-alt-store = { git = "https://github.com/apfitzge/solana-alt-store.git", rev = "2a279eae820edd9b7719523b2f26769e96353300" }
agave-banking-stage-ingress-types = "3.0.4"
solana-transaction = "3.0.0"
solana-clock = "3.0.0"
solana-address = "1.0.0"
solana-sdk-ids = "3.0.0"
solana-compute-budget-interface = { version = "3.0.0", features = ["borsh"] }
solana-borsh = "3.0.0"
solana-signature = "3.0.0"
solana-message = { version = "3.0.0", features = ["bincode", "blake3"] }
